<resources>
    <string name="app_name">Weather</string>

    <!-- UI element strings -->
    <string name="get_current_weather">Get Weather</string>
    <string name="current_weather">Current Weather Condition</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>

    <string name="action_settings">Settings</string>
    <string name="action_debugprefs">Debug</string>

    <!-- Settings strings -->
    <string name="current_location_name">Your Current Location</string>
    <string name="sample_location_name">AnyCity, Manitoba, Canada</string>
    <string name="save_changes_complete_button">Save Changes</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="temp_unit_celsius">Celsius</string>
    <string name="temp_unit_kelvin">Kelvin</string>
    <string name="temp_unit_fahrenheit">Fahrenheit</string>

    <!-- Placeholders -->
    <string name="city_name">City/Town Name</string>
    <string name="country_name">Country Name</string>

    <!-- System Strings -->
    <string name="error_weather_not_available">Could not retrieve weather details</string>
    <string name="title_activity_user_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_city_name">City Name</string>
    <string name="pref_default_city_name">Winnipeg</string>

    <string name="pref_title_current_temperature_unit">Temperature Unit</string>
    <string-array name="pref_temperature_unit_list_titles">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="pref_temperature_unit_list_values">
        <item>C</item>
        <item>F</item>
        <item>K</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
