<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="weather" type="jcuratcha.weather.objects.Weather"/>
    </data>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jcuratcha.weather.activities.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_temperature"/>
        <TextView
            android:id="@+id/text_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.temperature}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_weather"/>
        <TextView
            android:id="@+id/text_current_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.description}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"/>
        <TextView
            android:id="@+id/text_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.windSpeed}"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/wind_direction"/>-->
        <!--<TextView-->
            <!--android:id="@+id/text_wind_direction"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@{weather.windDirection.name()}"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"/>
        <TextView
            android:id="@+id/text_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.humidity}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"/>
        <TextView
            android:id="@+id/text_atm_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.pressure}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_cover"/>
        <TextView
            android:id="@+id/text_cloud_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.cloudiness}"/>

        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_weather_not_available"
            android:visibility="invisible"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/get_current_weather"
            android:onClick="GetCurrentWeatherData" />
    </LinearLayout>
</RelativeLayout>
</layout>
