<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:title="@string/pref_title_current_temperature_unit"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_city_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_city_name"/>

    <ListPreference
        android:defaultValue="C"
        android:entries="@array/pref_temperature_unit_list_titles"
        android:entryValues="@array/pref_temperature_unit_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_current_temperature_unit"/>

</PreferenceScreen>
